js on bands is running and returning what we want and i made slight changes to html and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Cabin', sans-serif;
   }
   
+  #featured-div {
+    color: whitesmoke;
+  }
+
   #logo {
     height: 200px;
     margin-top: 20px;
