--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Cabin', sans-serif;
   }
   
+  #featured-div {
+    color: whitesmoke;
+  }
+
   #logo {
     height: 200px;
     margin-top: 20px;
@@ -39,6 +43,10 @@ body {
     display: block;
     margin: auto;
     margin-bottom: 20px;
+  }
+  
+  #upcomingEventDiv{
+    color: white;
   }
   
   .jumbotron {
@@ -137,4 +145,12 @@ body {
   .wrapper footer .social-icon:hover {
     opacity: 1;
   }
+
+  #map {
+    height: 300px;
+    width: 300px;
+}
+.input-field{
+  background-color:white;
+}
   
