--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: black;
     font-family: 'Cabin', sans-serif;
+    text-align: center; /* I centered this*/
   }
   
   #featured-div {
@@ -13,6 +14,17 @@ body {
     margin-bottom: 20px;
   }
   
+  .buttonStyle { /*threw this in to make the search and clear links pop frmo the back ground a little more */
+    border: 1px solid white; 
+    background-color: rgb(51, 47, 47);
+  }
+
+  .buttonStyle a:hover { /* this too (see above)*/
+    background-color: rgb(6, 131, 214);
+    color: white;
+    font-size: 17px;
+  }
+
   #recent-user-header {
     color: white;
   }
@@ -151,10 +163,6 @@ body {
     width: 400px;
 }
 .input-field{
-<<<<<<< HEAD
   background-color:white;
-=======
-  background-color:grey;
->>>>>>> 5dbfc090a9b80b55c10645f3cde96bdcbc712256
 }
   
